# RDFCacheK2

./: .gitignore  .gitmodules  3rdparty-libs.cmake  CITATION.cff  CMakeLists.txt  CTestCustom.cmake  Makefile  README.md  build_index_all.py  cache_example.cpp  fetch_deps.sh  gcc-clang-checker.sh  generate_triples.py  main.cpp  template_config.ini
algorithms/: ParallelWorker.hpp  external_sort.hpp  quicksort_stoppable.hpp  stoppable_list_merge_sort.hpp  triple_external_sort.hpp
bash/: build_sds_from_nt.sh  docker_executor.sh
benchmarks/: cluster_insertion_speed.cpp  compare_64_32_depths_performance.cpp  compare_64_32_depths_performance_2.cpp  compare_64_32_depths_performance_3.cpp  insertion_speed.cpp  k2tree_mixed_benchmark.cpp  k2tree_size_benchmark.cpp  lazy_scan_benchmark.cpp  points_size_relationship.cpp
block/: Block.cpp  Block.hpp
cache/: Cache.cpp  Cache.hpp  CacheArgs.hpp  CacheContainer.hpp  CacheContainerFactory.cpp  CacheContainerFactory.hpp  CacheContainerImpl.cpp  CacheContainerImpl.hpp
core/: BandScanner.cpp  BandScanner.hpp  BinaryTriplesToSingleStringFile.cpp  BinaryTriplesToSingleStringFile.hpp  Cache.cpp  Cache.hpp  CacheConfig.hpp  CacheResult.cpp  CacheResult.hpp  CacheSettings.cpp  CacheSettings.hpp  EmptyISDManager.cpp  EmptyISDManager.hpp  EmptyScanner.cpp  EmptyScanner.hpp  EntitiesMapping.cpp  EntitiesMapping.hpp  Entity.h  Entity.hpp  FeedData.cpp  FeedData.hpp  FeedDataTripleIterator.hpp  FourSidedQueue.hpp  FullScanner.cpp  FullScanner.hpp  FullyIndexedCache.cpp  FullyIndexedCache.hpp  FullyIndexedCacheResponse.cpp  FullyIndexedPredicate.hpp  GraphResult.cpp  GraphResult.hpp  HRPDACBlocksBuilderFromIStream.cpp  HRPDACBlocksBuilderFromIStream.hpp  HTSDictionary.cpp  HTSDictionary.hpp  ICacheSettings.hpp  ISDManager.hpp  I_DataManager.hpp  I_UpdateLoggerPCM.hpp  InMemoryCacheSettings.cpp  (+83 more)
docker/: Dockerfile  Dockerfile_alpine  runner.sh
example/: example1.cpp  four_sided_queue_example.cpp  k2tree_example.cpp  start_cache_server_example.cpp
experiments/: build_from_raw_points.cpp  deserialize_k2tree.cpp  validate_k2tree_correctness.cpp
gresults-caching/: Cache.cpp  Cache.hpp  CacheReplacement.hpp  CacheReplacementFactory.cpp  CacheReplacementFactory.hpp  GraphResult.cpp  GraphResult.hpp  LRUCacheReplacement.cpp  LRUCacheReplacement.hpp  QueryError.cpp  QueryResult.cpp  QueryResult.hpp  TimeControl.hpp  VarIndexManager.hpp
memory/: MemoryManager.cpp  MemoryManager.hpp  MemoryPool.hpp  MemorySegment.cpp  MemorySegment.hpp  OutOfMemoryException.cpp  OutOfMemoryException.hpp  pooled_memory_impl.cpp
network/: CacheServer.cpp  CacheServer.hpp  CacheServerTaskProcessor.cpp  CacheServerTaskProcessor.hpp  CachedK2TreeScanner.cpp  CachedK2TreeScanner.hpp  CachedObjectScanner.cpp  CachedObjectScanner.hpp  CachedSubjectObjectScanner.hpp  CachedSubjectScanner.cpp  CachedSubjectScanner.hpp  CachingTripleTraversalCondition.cpp  CachingTripleTraversalCondition.hpp  FullyIndexedCache.cpp  FullyIndexedCache.hpp  FullyIndexedCacheResponse.hpp  FullyIndexedPredicate.cpp  FullyIndexedPredicate.hpp  I_DataMerger.hpp  I_QRStreamer.hpp  I_TRMatchingStreamer.hpp  I_TRStreamer.hpp  I_Updater.hpp  InMemoryTreeMerger.cpp  InMemoryTreeMerger.hpp  K2TreeUpdates.cpp  K2TreeUpdates.hpp  Message.cpp  Message.hpp  PCMMerger.cpp  PCMMerger.hpp  PCMUpdateLoggerWrapper.cpp  PCMUpdateLoggerWrapper.hpp  QueryResultPartStreamer.cpp  QueryResultPartStreamer.hpp  QueryResultStreamer.cpp  QueryResultStreamer.hpp  ReplacementTask.cpp  ReplacementTask.hpp  ReplacementTaskProcessor.cpp  (+26 more)
plib/: README.md
proc/: SDBuilder.cpp  SDBuilder.hpp  raptor_util.hpp
proto/: entities_mapping.proto  graph_result.proto  k2tree.proto  message_type.proto  predicates_index_cache.proto  radix_tree.proto  request_msg.proto  response_msg.proto  sparql_tree.proto
query_engine/: BGPMessage.hpp  BgpMessage.hpp  Cache.cpp  Cache.hpp  CacheArgs.hpp  CacheReplacementFactory.cpp  GraphResult.hpp  LRUCacheReplacement.hpp  QueryError.cpp  QueryError.hpp  README.md  TimeControl.cpp  TimeControl.hpp
scripts/: BinaryNodesReader.hpp  EntitiesMapping.cpp  EntitiesMapping.h  NTParser.cpp  NTParser.hpp  RadixTree.hpp  SDEnum.hpp  ULConnectorWHeaderCustomSerialization.hpp  ULHeaderIOHandlerCustomSerialization.hpp  base64_transform.cpp  binary_triples_to_file_set.cpp  build_k2tree_index.cpp  build_k2tree_index_debug.cpp  build_sd_from_fileset.cpp  cache_server.cpp  convert_nt_to_binary.cpp  convert_triples_to_binary.cpp  count_nt_predicates.cpp  dataset_stats.cpp  debug_read_k2trees_metadata.cpp  dicts_build_from_sets.cpp  external_sort.cpp  extract_triples_binary.cpp  index_by_k2tree.cpp  index_by_k2tree_with_sd.cpp  measure_serialization_time.cpp  node_ids_set_from_triples_set.cpp  print_k2tree_index.cpp  print_k2trees.cpp  print_nodeids.cpp  print_sd.cpp  radix_set_from_ntfile.cpp  random_dataset_gen.cpp  random_nt_dataset_generate.cpp  sample_set.cpp  sd_from_fileset.cpp  sd_from_fileset_readfull.cpp  sd_from_ntfile.cpp  search_paths.cpp  show_sds_map.cpp  (+8 more)
test/: bgp_ops_test.cpp  bgp_processor_test.cpp  bgp_streamer_test.cpp  bgp_test_util.hpp  binary_triples_to_single_string_file_test.cpp  cache_replacement_test.cpp  cache_test_util.cpp  cache_test_util.hpp  four_sided_queue_test.cpp  fully_indexed_cache_test.cpp  index_file_test.cpp  join_util_test.cpp  k2mixed_from_file.cpp  k2tree_mixed_test.cpp  k2tree_serialization_test.cpp  k2tree_tests.cpp  memory_segment_test.cpp  naive_string_dictionary_test.cpp  node_ids_dyn_mapper_test.cpp  nodeids_build_flow_test.cpp  nodeids_manager_impl_test.cpp  nodes_map_test.cpp  predicates_cache_manager_test.cpp  predicates_metadata_serialization_test.cpp  query_filters_test.cpp  query_proc_tests.cpp  query_proc_tests2.cpp  random_dataset_gen_test.cpp  result_table_test.cpp  sd_block_wrapper_test.cpp  search_paths_test.cpp  serialization_tests.cpp  server_task_test.cpp  sort_results_test.cpp  test_external_sort.cpp  test_sd_builder.cpp  update_log_test.cpp
utils/: FileIOStream.cpp  FileIOStream.hpp  FileIStream.cpp  FileIStream.hpp  FileOStream.cpp  FileOStream.hpp  (+15 more)
(+788 files in other folders)
